# guksu

./: Cargo.toml  LICENSE-MIT  README.md  concepts.md
benches/: kernels.rs  scan.rs  simsimd_compare.rs
src/: bitset.rs  error.rs  lib.rs  query.rs  rng.rs  scan.rs  storage.rs
src/kernels/: aarch64.rs  mod.rs  scalar.rs  x86_64.rs
src/quant/: binary.rs  int8.rs  mod.rs  parity.rs
src/scan/: error.rs  mod.rs  query.rs
src/storage/: binary.rs  error.rs  f32.rs  int8.rs  mod.rs
tests/: kernel_agreement.rs
